--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
+# Build and test dclip on macOS (CGO required for clipboard + AppKit)
 name: Go
 
 on:
@@ -10,19 +8,21 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.20'
+        go-version: '1.24'
 
-    - name: Build
+    - name: Build (native)
       run: go build -v ./...
+
+    - name: Build Windows amd64
+      run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -v -o /dev/null ./cmd/dclip
 
     - name: Test
       run: go test -v ./...
