--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,11 +1,13 @@
-# Build and test dclip on macOS (CGO required for clipboard + AppKit)
+# Build and test dclip on macOS (CGO required for clipboard + AppKit).
+# On version tags (v*), also build all platform binaries and publish a release.
 name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
+    tags: ["v*"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -26,3 +28,28 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+  release:
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: build
+    runs-on: macos-latest
+    permissions:
+      contents: write
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0   # needed for git describe (version embedding)
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.24'
+
+    - name: Build all platform binaries
+      run: make dist
+
+    - name: Create GitHub release and upload binaries
+      uses: softprops/action-gh-release@v2
+      with:
+        files: dist/*
+        generate_release_notes: true
